--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.organization=valaxy01-key
-sonar.projectKey=valaxy01-key_twittertrend
-sonar.projectName=twittertrend
+sonar.organization=sky0112
+sonar.projectKey=sky0112_sky-project
+sonar.projectName=sky-project
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
